--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-academic-docs-ai",
+  "name": "akademik-ajan",
   "private": true,
   "version": "0.0.0",
   "type": "module",
